--- a/friends_forlife/app/static/style/style.css
+++ b/friends_forlife/app/static/style/style.css
@@ -419,15 +419,6 @@ input[type="search"]::-webkit-search-decoration {
     color: rgba(114, 146, 153, 1);
 }
 
-.dog_search_first_section, .dog_search_second_section, .dog_search_third_section, .dog_search_fourth_section {
-    float: right;
-	width: 25%;
-	/*margin: 5% 5% 5% 0%;
-	padding-bottom: 5%;*/
-	/*border: 4px solid;
-	border-color: #D9F3FF;*/ 
-}
-
 /*.dog_search_first_section label {
  	float: right;
   	padding: 10% 0% 10% 0;	
@@ -616,7 +607,9 @@ input[type="search"]::-webkit-search-decoration {
 	margin-right: 5%;
 	position: relative;
 	float: right;
+	border-radius: 10px;
 }
+
 #dog_div .picture
 {
 	width: 14%;
@@ -635,6 +628,9 @@ input[type="search"]::-webkit-search-decoration {
     width: 70%;
 }
 
+.dogsDetails span {
+	color: rgba(114, 146, 153, 1);
+}
 
 #dog_div .age
 {
@@ -668,7 +664,10 @@ input[type="search"]::-webkit-search-decoration {
     margin-top: 27px;
 }
 
-
+.col-4 {
+	width: 25%;
+	float: right;
+}
 
 /*=========================================*/
 /*====PAGE - Foster_Registration =====*/ 
