--- a/friends_forlife/app/templates/app/house_registration.html
+++ b/friends_forlife/app/templates/app/house_registration.html
@@ -124,7 +124,7 @@ class DogHouse(models.Model):
 							</section>
                             <form class ="foster_form" name="house_registartion" method="post" action="house_register">
                                 <h1>רישום לאומנה</h1>
-                                <div class="col">
+                                <div class="col-2">
                                     <label class="fost_form_label">שם</label><br>
                                     <input type="text" class="foster_form_input" name="owner_name" placeholder="שם מלא"><br>
                                     <label class="fost_form_label">טלפון</label><br>
@@ -132,7 +132,7 @@ class DogHouse(models.Model):
                                     <label class="fost_form_label">דואר אלקטרוני</label><br>
                                     <input type="email" class="foster_form_input" name="owner_email" placeholder="exempale@gmail.com"><br>
                                 </div>
-                                <div class="col">
+                                <div class="col-2">
                                     <label class="fost_form_label">יישוב</label><br>
                                     <input type="text" class="foster_form_input" name="owner_city" placeholder="יישוב"><br>
                                     <label class="fost_form_label">כתובת מלאה</label><br>
@@ -140,7 +140,7 @@ class DogHouse(models.Model):
                                     <label class="fost_form_label">תפוסה מקסימאלית</label><br>
                                     <input type="number" name="capacity" class="foster_form_input" placeholder="1" value="1"><br>
                                 </div>
-                                <div class="col">
+                                <div class="col-5">
                                     <input type="submit" class="submitBtn" value="שלח"></input>
                                 </div>
                             </form>
