--- a/friends_forlife/app/static/style/style.css
+++ b/friends_forlife/app/static/style/style.css
@@ -673,7 +673,7 @@ input[type="search"]::-webkit-search-decoration {
 	width: 40%;
     float: right;
     text-align: center;
-    margin-top: 27px;
+    margin-top: 30px;
 }
 
 .col-4 {
@@ -685,7 +685,7 @@ input[type="search"]::-webkit-search-decoration {
 	width: 20%;
     float: right;
     text-align: center;
-    margin-top: 27px;
+    margin-top: 30px;
 }
 
 /*=========================================*/
@@ -695,9 +695,9 @@ input[type="search"]::-webkit-search-decoration {
 .information_about_foster {
     margin: 20px 20px 50px 20px;
     line-height: 25px;
-    font-size: 13px;
+    font-size: 14px;
     width: 100%;
-    text-align: center;
+    /*text-align: center;*/
     border-bottom: #eee 2px solid;
     padding-bottom: 10px;
 }
@@ -736,7 +736,7 @@ input[type="search"]::-webkit-search-decoration {
   padding: 10px 20px 10px 20px;
   text-decoration: none;
 	border: none;
-    margin-top: 56px;
+    margin-top: 80px;
 	font-family: trashimclm;
 }
 
