--- a/friends_forlife/app/templates/app/dogs_index.html
+++ b/friends_forlife/app/templates/app/dogs_index.html
@@ -64,6 +64,20 @@
                                     <div class="dogs_index_dogsDetails">
                                      <p class="name">{{ dog.name }}</p>
                                         <div class="dogs_index_col">
+                                        	<p>
+												<span>מין: </span> {{ dog.gender }}
+											</p>
+											<p>
+												<span>גיל: </span> {{ dog.age }}
+											</p>
+											<p>
+												<span>גזע: </span> {{ dog.type_name }}
+											</p>
+											<p>
+												<span>צבע: </span>  {{ dog.color }}
+											</p>
+                                        	
+                                        	<!--
                                             <label class="label"> מין:</label>
                                             <p class="text"> {{ dog.gender }}</p>
                                             <label class="label">גיל:</label>
@@ -71,7 +85,8 @@
                                             <label class="label"> גזע:</label>
                                             <p class="text"> {{ dog.type_name }}</p>
                                             <label class="label"> צבע:</label>
-                                            <p class="text">{{ dog.color }}</p>
+                                            <p class="text">{{ dog.color }}</p>-->
+                                            
                                         </div>
                                         <div class="dogs_index_col">
                                             <br>
