--- a/friends_forlife/app/static/style/style.css
+++ b/friends_forlife/app/static/style/style.css
@@ -59,7 +59,7 @@ footer, #outer-wrap:after {
 /*=========== HEADER SETTINGS ===============*/ 
 /*=========================================*/
 
-header #top {
+header#top {
 	margin-bottom: 20px;
 }
 
@@ -895,7 +895,7 @@ input[type="search"]::-webkit-search-decoration {
 .dogs_index_dogsDetails{
 	float: right;
     margin: 5% 1%;
-    width: 70%;
+    width: 78%;
 }
 
 #dogs_index_dog_div .age
@@ -926,10 +926,36 @@ input[type="search"]::-webkit-search-decoration {
 }
 
 .dogs_index_col{
-	width: 25%;
+	width: 23%;
     float: right;
-    text-align: center;
+    /*text-align: center;*/
     margin-top: 27px;
+    padding-right: 4%;
+}
+
+.dogs_index_col .dogDetailAdmin {
+	margin-top: 36px;
+}
+
+.dogs_index_col .dogDetailAdmin p {
+	margin-bottom: 5px;
+}
+
+.dogs_index_col .dogDetailAdmin p {
+	font-family: gisha;
+	font-weight: lighter;
+	font-size: 18px;
+}
+
+.dogs_index_col .dogDetailAdmin p span {
+	font-size: 18px;
+	color: rgba(114, 146, 153, 1);
+	font-family: trashimclm;
+}
+
+.dogs_index_col .dogs_index_btn {
+	width: 6%;
+    padding-right: 13%;	
 }
 
 #dogs_index_dog_div .text {
@@ -940,11 +966,6 @@ input[type="search"]::-webkit-search-decoration {
 
 #dogs_index_dog_div .label{
 	font-size:18px;
-	color: rgba(114, 146, 153, 1);
-}
-
-.dogs_index_col p span {
-	font-size: 18px;
 	color: rgba(114, 146, 153, 1);
 }
 
