--- a/friends_forlife/app/templates/app/dogs_index.html
+++ b/friends_forlife/app/templates/app/dogs_index.html
@@ -108,7 +108,7 @@
                                                <p style="color:#e74c3c;"> לא מתאים לאלרגיים</p>
                                             {% endif %}
                                         </div>
-                                        <div class="dogs_index_col">
+                                        <div class="dogs_index_col dogs_index_details">
 {#                                            <p class="description"> {{ dog.description }}</p>#}
                                               <br>
                                               <label class="label"> עודכן:</label>
